# INF551_propositional_prover

./: .gitignore  README.md  TD4.opam  dune-project  interactive.proof  report_notes
dependent_proofs/: dnat.proof  pred.proof  sum.proof
proofs/: 2_4_without_elim.proof  add.proof  app.proof  appid.proof  comp.proof  contr.proof  curry1.proof  dist.proof  impdm.proof  nnef.proof  nnem.proof  nni.proof  ntf.proof  orelim.proof  pred.proof  russel.proof  s.proof  tstr.proof
