(lang dune 3.12)

(name TD4)

(generate_opam_files true)

(source
 (github clemsys/INF551_TD4-dune))

(authors "Cl\195\169ment CHAPOT")

(maintainers "Cl\195\169ment CHAPOT")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name TD4)
 (synopsis "Ocaml implementation of a propositional prover")
 (description "Ocaml implementation of a propositional prover")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
